Updated backend server to return question
